secp256k1-zkp-sys/secp_bindings.rs

extern "C" {
    #[doc = " Negates a secret key in place."]
    #[doc = ""]
    #[doc = "  Returns: 0 if the given secret key is invalid according to"]
    #[doc = "           secp256k1_zkp_ec_seckey_verify. 1 otherwise"]
    #[doc = "  Args:   ctx:    pointer to a context object"]
    #[doc = "  In/Out: seckey: pointer to the 32-byte secret key to be negated. If the"]
    #[doc = "                  secret key is invalid according to"]
    #[doc = "                  secp256k1_zkp_ec_seckey_verify, this function returns 0 and"]
    #[doc = "                  seckey will be set to some unspecified value. (cannot be"]
    #[doc = "                  NULL)"]
    pub fn secp256k1_zkp_ec_seckey_negate(
        ctx: *const secp256k1_zkp_context,
        seckey: *mut ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Same as secp256k1_zkp_ec_seckey_negate, but DEPRECATED. Will be removed in"]
    #[doc = "  future versions."]
    pub fn secp256k1_zkp_ec_privkey_negate(
        ctx: *const secp256k1_zkp_context,
        seckey: *mut ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Negates a public key in place."]
    #[doc = ""]
    #[doc = "  Returns: 1 always"]
    #[doc = "  Args:   ctx:        pointer to a context object"]
    #[doc = "  In/Out: pubkey:     pointer to the public key to be negated (cannot be NULL)"]
    pub fn secp256k1_zkp_ec_pubkey_negate(
        ctx: *const secp256k1_zkp_context,
        pubkey: *mut secp256k1_zkp_pubkey,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Tweak a secret key by adding tweak to it."]
    #[doc = ""]
    #[doc = "  Returns: 0 if the arguments are invalid or the resulting secret key would be"]
    #[doc = "           invalid (only when the tweak is the negation of the secret key). 1"]
    #[doc = "           otherwise."]
    #[doc = "  Args:    ctx:   pointer to a context object (cannot be NULL)."]
    #[doc = "  In/Out: seckey: pointer to a 32-byte secret key. If the secret key is"]
    #[doc = "                  invalid according to secp256k1_zkp_ec_seckey_verify, this"]
    #[doc = "                  function returns 0. seckey will be set to some unspecified"]
    #[doc = "                  value if this function returns 0. (cannot be NULL)"]
    #[doc = "  In:      tweak: pointer to a 32-byte tweak. If the tweak is invalid according to"]
    #[doc = "                  secp256k1_zkp_ec_seckey_verify, this function returns 0. For"]
    #[doc = "                  uniformly random 32-byte arrays the chance of being invalid"]
    #[doc = "                  is negligible (around 1 in 2^128) (cannot be NULL)."]
    pub fn secp256k1_zkp_ec_seckey_tweak_add(
        ctx: *const secp256k1_zkp_context,
        seckey: *mut ::std::os::raw::c_uchar,
        tweak: *const ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Same as secp256k1_zkp_ec_seckey_tweak_add, but DEPRECATED. Will be removed in"]
    #[doc = "  future versions."]
    pub fn secp256k1_zkp_ec_privkey_tweak_add(
        ctx: *const secp256k1_zkp_context,
        seckey: *mut ::std::os::raw::c_uchar,
        tweak: *const ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Tweak a public key by adding tweak times the generator to it."]
    #[doc = ""]
    #[doc = "  Returns: 0 if the arguments are invalid or the resulting public key would be"]
    #[doc = "           invalid (only when the tweak is the negation of the corresponding"]
    #[doc = "           secret key). 1 otherwise."]
    #[doc = "  Args:    ctx:   pointer to a context object initialized for validation"]
    #[doc = "                  (cannot be NULL)."]
    #[doc = "  In/Out: pubkey: pointer to a public key object. pubkey will be set to an"]
    #[doc = "                  invalid value if this function returns 0 (cannot be NULL)."]
    #[doc = "  In:      tweak: pointer to a 32-byte tweak. If the tweak is invalid according to"]
    #[doc = "                  secp256k1_zkp_ec_seckey_verify, this function returns 0. For"]
    #[doc = "                  uniformly random 32-byte arrays the chance of being invalid"]
    #[doc = "                  is negligible (around 1 in 2^128) (cannot be NULL)."]
    pub fn secp256k1_zkp_ec_pubkey_tweak_add(
        ctx: *const secp256k1_zkp_context,
        pubkey: *mut secp256k1_zkp_pubkey,
        tweak: *const ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Tweak a secret key by multiplying it by a tweak."]
    #[doc = ""]
    #[doc = "  Returns: 0 if the arguments are invalid. 1 otherwise."]
    #[doc = "  Args:   ctx:    pointer to a context object (cannot be NULL)."]
    #[doc = "  In/Out: seckey: pointer to a 32-byte secret key. If the secret key is"]
    #[doc = "                  invalid according to secp256k1_zkp_ec_seckey_verify, this"]
    #[doc = "                  function returns 0. seckey will be set to some unspecified"]
    #[doc = "                  value if this function returns 0. (cannot be NULL)"]
    #[doc = "  In:      tweak: pointer to a 32-byte tweak. If the tweak is invalid according to"]
    #[doc = "                  secp256k1_zkp_ec_seckey_verify, this function returns 0. For"]
    #[doc = "                  uniformly random 32-byte arrays the chance of being invalid"]
    #[doc = "                  is negligible (around 1 in 2^128) (cannot be NULL)."]
    pub fn secp256k1_zkp_ec_seckey_tweak_mul(
        ctx: *const secp256k1_zkp_context,
        seckey: *mut ::std::os::raw::c_uchar,
        tweak: *const ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Same as secp256k1_zkp_ec_seckey_tweak_mul, but DEPRECATED. Will be removed in"]
    #[doc = "  future versions."]
    pub fn secp256k1_zkp_ec_privkey_tweak_mul(
        ctx: *const secp256k1_zkp_context,
        seckey: *mut ::std::os::raw::c_uchar,
        tweak: *const ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Tweak a public key by multiplying it by a tweak value."]
    #[doc = ""]
    #[doc = "  Returns: 0 if the arguments are invalid. 1 otherwise."]
    #[doc = "  Args:    ctx:   pointer to a context object initialized for validation"]
    #[doc = "                  (cannot be NULL)."]
    #[doc = "  In/Out: pubkey: pointer to a public key object. pubkey will be set to an"]
    #[doc = "                  invalid value if this function returns 0 (cannot be NULL)."]
    #[doc = "  In:      tweak: pointer to a 32-byte tweak. If the tweak is invalid according to"]
    #[doc = "                  secp256k1_zkp_ec_seckey_verify, this function returns 0. For"]
    #[doc = "                  uniformly random 32-byte arrays the chance of being invalid"]
    #[doc = "                  is negligible (around 1 in 2^128) (cannot be NULL)."]
    pub fn secp256k1_zkp_ec_pubkey_tweak_mul(
        ctx: *const secp256k1_zkp_context,
        pubkey: *mut secp256k1_zkp_pubkey,
        tweak: *const ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Updates the context randomization to protect against side-channel leakage."]
    #[doc = "  Returns: 1: randomization successfully updated or nothing to randomize"]
    #[doc = "           0: error"]
    #[doc = "  Args:    ctx:       pointer to a context object (cannot be NULL)"]
    #[doc = "  In:      seed32:    pointer to a 32-byte random seed (NULL resets to initial state)"]
    #[doc = ""]
    #[doc = " While secp256k1 code is written to be constant-time no matter what secret"]
    #[doc = " values are, it's possible that a future compiler may output code which isn't,"]
    #[doc = " and also that the CPU may not emit the same radio frequencies or draw the same"]
    #[doc = " amount power for all values."]
    #[doc = ""]
    #[doc = " This function provides a seed which is combined into the blinding value: that"]
    #[doc = " blinding value is added before each multiplication (and removed afterwards) so"]
    #[doc = " that it does not affect function results, but shields against attacks which"]
    #[doc = " rely on any input-dependent behaviour."]
    #[doc = ""]
    #[doc = " This function has currently an effect only on contexts initialized for signing"]
    #[doc = " because randomization is currently used only for signing. However, this is not"]
    #[doc = " guaranteed and may change in the future. It is safe to call this function on"]
    #[doc = " contexts not initialized for signing; then it will have no effect and return 1."]
    #[doc = ""]
    #[doc = " You should call this after secp256k1_zkp_context_create or"]
    #[doc = " secp256k1_zkp_context_clone (and secp256k1_zkp_context_preallocated_create or"]
    #[doc = " secp256k1_zkp_context_clone, resp.), and you may call this repeatedly afterwards."]
    pub fn secp256k1_zkp_context_randomize(
        ctx: *mut secp256k1_zkp_context,
        seed32: *const ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Add a number of public keys together."]
    #[doc = ""]
    #[doc = "  Returns: 1: the sum of the public keys is valid."]
    #[doc = "           0: the sum of the public keys is not valid."]
    #[doc = "  Args:   ctx:        pointer to a context object"]
    #[doc = "  Out:    out:        pointer to a public key object for placing the resulting public key"]
    #[doc = "                      (cannot be NULL)"]
    #[doc = "  In:     ins:        pointer to array of pointers to public keys (cannot be NULL)"]
    #[doc = "          n:          the number of public keys to add together (must be at least 1)"]
    pub fn secp256k1_zkp_ec_pubkey_combine(
        ctx: *const secp256k1_zkp_context,
        out: *mut secp256k1_zkp_pubkey,
        ins: *const *const secp256k1_zkp_pubkey,
        n: size_t,
    ) -> ::std::os::raw::c_int;
}
#[doc = " A pointer to a function that hashes an EC point to obtain an ECDH secret"]
#[doc = ""]
#[doc = "  Returns: 1 if the point was successfully hashed."]
#[doc = "           0 will cause secp256k1_zkp_ecdh to fail and return 0."]
#[doc = "           Other return values are not allowed, and the behaviour of"]
#[doc = "           secp256k1_zkp_ecdh is undefined for other return values."]
#[doc = "  Out:     output:     pointer to an array to be filled by the function"]
#[doc = "  In:      x32:        pointer to a 32-byte x coordinate"]
#[doc = "           y32:        pointer to a 32-byte y coordinate"]
#[doc = "           data:       arbitrary data pointer that is passed through"]
pub type secp256k1_zkp_ecdh_hash_function = ::std::option::Option<
    unsafe extern "C" fn(
        output: *mut ::std::os::raw::c_uchar,
        x32: *const ::std::os::raw::c_uchar,
        y32: *const ::std::os::raw::c_uchar,
        data: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int,
>;
extern "C" {
    pub static secp256k1_zkp_ecdh_hash_function_sha256: secp256k1_zkp_ecdh_hash_function;
}
extern "C" {
    pub static secp256k1_zkp_ecdh_hash_function_default: secp256k1_zkp_ecdh_hash_function;
}
